fixed gradient shadow for buy button on mobile

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -17,7 +17,7 @@ $bgWindowContainer: rgba(0, 0, 0, 0.7);
 $bgGradient: linear-gradient(100.83deg, $darkBlue 0.67%, $black 100%);
 $shadowGradient:
   linear-gradient(180deg,
-  rgba(0, 0, 0, 0.21) 0%,
+  rgba(0, 0, 0, 0) 0%,
   rgba(4, 4, 4, 0.59) 23.44%,
   #050505 100%);
 
